fix viewing issues on smaller screens

--- a/style.css
+++ b/style.css
@@ -46,7 +46,8 @@ body{
 }
 
 header{
-    overflow: hidden;
+    /* overflow: hidden; */
+    height: fit-content;
 }
 
 header h1 h2{
@@ -87,19 +88,23 @@ header h1 h2{
 nav{
     
     background-color: black;
-    height: 3.5em;
-    padding: 15px;
-    margin: 0;
+    /* height: 3.5em; */
+    padding: 10px;
+    margin: 0 auto;
+    text-align: center;
     border-color: black;
     position: sticky;
     
+    top: 0;
+    width: 100%; 
+      
 }
 
 nav ul{
     list-style-type: none;
     /* background-color: black; */
-    padding: 0;
-    margin:  10px 0;
+    padding: 5px;
+    margin:  1px 0;
     display: inline-block;
 }
 nav li{
@@ -118,7 +123,7 @@ nav li a{
 
 nav li a:hover{
     background-color: blueviolet;
-    font-size: 170%;
+    font-size: 150%;
 }
 
 #header_projects{
@@ -149,7 +154,7 @@ nav li a:hover{
 }
 
 main{
-    overflow: hidden;
+    /* overflow: hidden; */
     padding: 30px;
     background-color: gainsboro;
 }
@@ -188,13 +193,17 @@ article{
 
 .about-items .about-story{
     padding: 8px;
-    border: 1px solid black;
+    /* border: 1px solid black; */
     width: 70%;
+}
+
+.about-items .about-story p{
+    margin-top: 0;
 }
 
 .about-items .about-aside{
     padding: 5px;
-    border: 1px solid black;
+    /* border: 1px solid black; */
     margin-left: auto;
     height: fit-content;
     background-color: rgb(213, 150, 213);
@@ -368,12 +377,18 @@ aside h3{
 
     #about .about-items .about-aside{
         height: fit-content;
+        margin: 0 8px;
     }
 
+    #about .about-items .about-story{
+        padding: 2px;
+    }
     .portfolio_profile_img{
         /* width: 45%;
         height: 45%; */
-        margin: 0 auto;
+        width: 300px;
+        min-width: auto;
+        margin: 5px auto;
         flex-shrink: 0;
     }
 
@@ -381,6 +396,7 @@ aside h3{
         flex-direction: column;
         justify-content: center;
         align-items: center;
+        text-align: center;
     }
     /* #header_items{
         margin: 20px 20%;
